--- a/index.html
+++ b/index.html
@@ -1,15 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>{{OG_TITLE}}</title>
+<title>HTML Editor</title>
 <meta name="google" content="notranslate">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="{{META_DESCRIPTION}}">
-<meta name="keywords" content="{{META_KEYWORDS}}">
-<meta property="og:title" content="{{OG_TITLE}}">
-<meta property="og:description" content="{{OG_DESCRIPTION}}">
-<meta property="og:url" content="{{OG_URL}}">
-<meta property="og:image" content="{{OG_IMAGE}}">
 <meta charset="utf-8">
 <style>
 html {
@@ -212,12 +206,9 @@ ul.menu-list li span {
             <span>Ctrl+Shift+P</span>
             <span>(CTRL+Shift+U to Update Preview)</span>
         </li>
-        <li><a id="menu-contribute" href="https://github.com/rioastamal/html-editor/" target="_blank">Contribute</a></li>
+        
     </ul>
-    <div class="menu-footer">
-        <span>HTML Editor v{{APP_VERSION}}</span>
-        <span>Made with &#x2665; by <a href="https://rioastamal.net/">Rio Astamal</a></span>
-    </div>
+    
 </div>
 
 <!-- EDITOR WINDOW -->
